# ansible-poetry

./: README.md  ansible-requirements.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ansible.yml
