[tool.poetry]
name = "ansible-poetry"
version = "0.1.0"
description = "Ansible respository"
authors = ["Michal Czeraszkiewicz <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.2.0"
boto3 = "^1.34.158"
botocore = "^1.34.158"
ansible-lint = { version = "^24.7.0", markers = "platform_system != 'Windows'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
